Estilos generales terminado

--- a/Web Restaurante/css/styles.css
+++ b/Web Restaurante/css/styles.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
 }
 
-/* Estilos base */
+/*-----------------Estilos base-----------------*/
 
 img {
     display: block;
@@ -20,3 +20,21 @@ img {
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
+
+.container {
+    width: 100%;
+    margin: auto;
+}
+
+.container--flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.column {
+    width: 100%;
+}
+
+/*-----------------Estilos header-----------------*/
