Estilos header terminado

--- a/Web Restaurante/css/styles.css
+++ b/Web Restaurante/css/styles.css
@@ -38,3 +38,33 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*-----------------Estilos header-----------------*/
+
+.main-header {
+    width: 100%;
+}
+
+.logo {
+    font-size: 1.8em;
+    color: #DE423A;
+    padding: 10px;
+    font-family: 'Pacifico', cursive;
+    font-weight: 100;
+}
+
+.main-header__contactInfo__phone {
+    background: #DE423A;
+    color: white;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.main-header__contactInfo__address {
+    margin: 0;
+    padding: 10px;
+}
+
+.main-header [class*="icon-"]:before {
+    position: relative;
+    top: 2px;
+    right: 5px;
+}
