Estilos del menú aplicados

--- a/Web Restaurante/css/styles.css
+++ b/Web Restaurante/css/styles.css
@@ -68,3 +68,69 @@ h1, h2, h3, h4, h5, h6 {
     top: 2px;
     right: 5px;
 }
+
+/*-----------------Estilos del Menú-----------------*/
+
+.main-nav {
+    width: 100%;
+    position: relative;
+    z-index: 2000;
+    padding: 10px;
+}
+
+.icon-menu {
+   display: block;
+   color: white;
+
+}
+
+.social-icon {
+    display: flex;
+    justify-content: space-between;
+}
+
+.social-icon [class*="icon-"] {
+    color:black;
+    margin-left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-style: 1.3em;
+    width: 35px;
+    height: 35px;
+    background: white;
+    border-radius: 50%;
+}
+
+.social-icon__link {
+    text-decoration: none;
+}
+
+.menu {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background: rgba(0,0,0,.90);
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+}
+
+.menu__link {
+    display: block;
+    padding: 15px;
+    color: white;
+    text-decoration: none;
+}
+
+.menu__link:hover {
+    background:#DE423A; 
+}
+
+.menu__link--select {
+    background:#DE423A;    
+}
+
+/*-----------------Estilos del Banner-----------------*/
