--- a/Web Restaurante/css/styles.css
+++ b/Web Restaurante/css/styles.css
@@ -81,7 +81,14 @@ h1, h2, h3, h4, h5, h6 {
 .icon-menu {
    display: block;
    color: white;
-
+   border: 1px solid white;
+   border-radius: 3px;
+   width: 40px;
+   height: 40px;
+   line-height: 45px;
+   text-align: center;
+   cursor: pointer;
+   font-size: 1.5em;
 }
 
 .social-icon {
@@ -134,3 +141,38 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*-----------------Estilos del Banner-----------------*/
+
+.banner {
+    margin-top: -55px;
+    position: relative;
+}
+
+.banner:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height:100%;
+    background:rgba(0,0,0,0.7);
+    z-index: 1000;
+    top: 0;
+}
+
+.banner__img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+}
+
+.banner__content {
+    width: 90%;
+    color: white;
+    text-align: center;
+    position: absolute;
+    z-index: 1500;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
