--- a/Web Restaurante/css/styles.css
+++ b/Web Restaurante/css/styles.css
@@ -123,6 +123,9 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
     list-style: none;
     text-align: center;
+    height: 0;
+    overflow: hidden;
+    
 }
 
 .menu__link {
