Aplicados estilos index.html version movil

--- a/Web Restaurante/css/styles.css
+++ b/Web Restaurante/css/styles.css
@@ -183,3 +183,96 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 
+/*-----------------Estilos Principales-----------------*/
+
+.group--color .container {
+    background: #DE423A;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
+-main__title {
+    margin: 15px 0;
+    font-size: 1.8em;
+    font-family: 'Pacifico', cursive;
+    font-weight: 100;
+}
+
+.column__title {
+    font-size: 1.3em;
+}
+
+.main__about__description .column:nth-child(2) {
+    padding: 10px;
+}
+
+.btn {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: 120px;
+    background: #DE423A;
+    color: white;
+    padding: 10px;
+    margin: 10px auto;
+}
+
+.group__title {
+    font-family: 'Pacifico', cursive;
+    text-align: center;
+    font-weight: 100;
+    font-size: 1.8em;
+    margin: 30px;
+}
+
+.today-special .column {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.today-special__img {
+    margin: auto;
+    max-width: 350px;
+}
+
+.today-special__title {
+    font-weight: bold;
+    font-size: 1.3em;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+.today-special__price {
+    font-size: 1.5em;
+    color:#DE423A;
+    font-weight: bold;
+}
+
+/*-----------------Estilos del Footer-----------------*/
+
+.main-footer {
+    background: #222;
+    color: white;
+    padding: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: .8em;
+}
+
+.copy {
+    text-align: center;
+    margin: auto;
+    margin-top: 15px;
+}
+
+.main-footer [class*="icon-"] {
+    color: white;
+    text-decoration: none;
+}
+
+.main-footer [class*="icon-"]:before {
+    position: relative;
+    top: 3px;
+    right: 5px;
+}
