--- a/Web Restaurante/css/styles.css
+++ b/Web Restaurante/css/styles.css
@@ -276,3 +276,54 @@ h1, h2, h3, h4, h5, h6 {
     top: 3px;
     right: 5px;
 }
+
+/*-----------------Estilos responsive-----------------*/
+
+@media screen and (min-width:480px) {
+    .logo {
+        color:white;
+    }
+    .main-header__contactInfo {
+        text-align: right;
+    }
+    .banner {
+        margin-top: -160px;
+        z-index: -1000;
+    }
+    .banner__content {
+        font-size: 2em;
+    }
+    .main-header__contactInfo__phone {
+        background: none;
+    }
+    .main-header__contactInfo__address{
+        color: white;
+    }
+    .column--50 {
+        width: 49%;
+    }
+    .column--50-25 {
+        width: 49%;
+    }
+    .column--33 {
+        width: 32%;
+    }
+    .main-nav {
+        background: rgba(0,0,0,0.35);
+    }
+    .main__about__description .column:nth-child(2) {
+        padding-left: 20px;
+        font-size: .9em;
+    }
+    .main__about__description .btn {
+        margin: 0;
+    }
+    .today-special .column {
+        border: 5px solid #ddd;
+        padding: 5px;
+    }
+    .today-special__img {
+        height: 200px;
+        object-fit: cover;
+    }
+}
